appId: com.falei.app
env:
  VALID_EMAIL: daniel.mendonca@geradornv.com.br
  VALID_PASSWORD: 1_hr8&xZQQ4G
  SIGN_UP_BUTTON: Criar conta
---
- launchApp
- tapOn: Começar

# Required fields
- tapOn: ${SIGN_UP_BUTTON}
- assertVisible: O campo é obrigatório.
- assertVisible: O campo é obrigatório.

# Email
- tapOn:
    id: email-input
- inputText: invalid_email.com
- assertVisible: E-mail inválido.
- eraseText
- inputText: ${VALID_EMAIL}

# Password
- tapOn:
    id: password-input
- inputRandomText:
    length: 4
- assertVisible: A senha deve conter no minímo 8 caracteres.
- eraseText
- inputRandomText:
    length: 48
- assertVisible: A senha deve conter no máximo 45 caracteres.
- eraseText
- inputText: ${VALID_PASSWORD}
- assertNotVisible: ${VALID_PASSWORD}
- tapOn:
    id: toggle-password-visiblity
- assertVisible: ${VALID_PASSWORD}

# Submit
- tapOn: ${SIGN_UP_BUTTON}
- assertVisible: Sua conta foi criada com sucesso!
- assertNotVisible: ${VALID_EMAIL}
- assertNotVisible: ${VALID_PASSWORD}
